force-app/main/default/objects/vlocity_cmt__AdCreativeSizeType__c/vlocity_cmt__AdCreativeSizeType__c.object-meta.xml
<CustomObject>
    <description>The Ad Creative SizeType defines the size of the Ad Creative. Ex : 400 X 450</description>
    <label>Ad Creative SizeType</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ad Creative SizeTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>