force-app/main/default/objects/vlocity_cmt__AdCreativeSizeType__c/fields/vlocity_cmt__Height__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Height__c</fullName>
    <label>Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>