force-app/main/default/objects/vlocity_cmt__AdCreativeSizeType__c/fields/vlocity_cmt__MediaType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MediaType__c</fullName>
    <description>This captures the Type of the AdSpace SizeType.</description>
    <label>Media Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital Banner</fullName>
            </value>
            <value>
                <fullName>Digital Video</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>