force-app/main/default/objects/vlocity_cmt__AdCreativeSizeType__c/fields/vlocity_cmt__UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__UnitOfMeasure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pixels</fullName>
            </value>
            <value>
                <fullName>Inches</fullName>
            </value>
            <value>
                <fullName>mm</fullName>
            </value>
            <value>
                <fullName>Seconds</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>