force-app/main/default/objects/vlocity_cmt__AdCreativeSizeType__c/fields/vlocity_cmt__Width__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Width__c</fullName>
    <label>Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>