force-app/main/default/objects/vlocity_cmt__AdCreativeSizeType__c/listViews/vlocity_cmt__All.listView-meta.xml
<ListView>
    <fullName>vlocity_cmt__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_cmt__MediaType__c</columns>
    <columns>vlocity_cmt__Height__c</columns>
    <columns>vlocity_cmt__Width__c</columns>
    <columns>vlocity_cmt__UnitOfMeasure__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>